Fix windows sometimes being draggable from the tab strip on 10.14.

AppKit is eager to allow server-side dragging in the title bar area
(meaning marking the region as draggable at the window server level),
but Views currently decides on a click-by-click basis (see |-hitTest:|).
One AppKit requirement is that, for a view to block title bar dragging,
it needs to return YES from |-acceptsFirstResponder:|, even if it
doesn't actually accept first responder later. BridgedContentView
returned different values at different times, which made dragging
inconsistent. This was sidestepped by overriding |-[NSWindow
_copyDragRegion]|, but that method no longer exists on 10.14.

This change makes |-acceptsFirstResponder| always return YES and removes
the hack. A similar hack is left over to support 10.10. If this change
turns out to not be viable, an override like this should work instead:

    @implementation BrowserNativeWidgetWindow
    // …
    - (NSRect)_opaqueRectForWindowMoveWhenInTitlebar {
      return NSZeroRect;
    }
    //…
    @end

Bug: 855901
Change-Id: I4ef93f1bee1b2cc7b39fab0eec7fe82a526b61e4
Reviewed-on: https://chromium-review.googlesource.com/1152076
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578642}
Former-commit-id: 312cc70dbd68686332c4a489bafba694181e0339